# lauren-framework

./: .CLAUDE.md  .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docs-requirements.txt  llms-full.txt  llms.txt  mkdocs.yml  noxfile.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  performance.yml
.github/workflows/: codeql.yml  docs.yml  lint.yml  release.yml  stale.yml  tests.yml
docs/: index.md
docs/comparisons/: index.md  python-frameworks.md
docs/concepts/: extractors-vs-dependencies-vs-guards-vs-middlewares.md
docs/core-concepts/: controllers.md  index.md  inheritance.md  injectables.md  lifecycle.md  modules.md  request-response.md
docs/development/: index.md  reflect-expansion-prd.md  release.md  versioning.md
docs/generated-reference/: app.md  background.md  decorators.md  di.md  exceptions.md  extractors.md  signals.md  sse.md  testing.md  types.md  websockets.md
docs/getting-started/: features.md  index.md  installation.md  quickstart.md  why-lauren.md
docs/guides/: agent-skills.md  background-tasks.md  circular-module-imports.md  custom-exception-handlers.md  custom-extractors.md  custom-guards.md  custom-middleware.md  custom-providers.md  custom-responses.md  custom-route-handlers.md  declaring-injectables.md  dependency-injection.md  di-model-types.md  file-responses.md  file-uploads.md  implicit-params.md  index.md  interceptors.md  logging.md  openapi-security.md  pipes.md  propagate-metadata.md  proxy-and-static-files.md  server-sent-events.md  sessions.md  signals.md  socketio.md  sync-handlers.md  typed-streaming.md  websockets.md
docs/reference/: app.md  background.md  cheat-sheet.md  decorators.md  di.md  errors.md  exceptions.md  extractors.md  index.md  reflect.md  sessions.md  signals.md  sse.md  testing.md  types.md  websockets.md
docs/tutorial/: 01-first-hero.md  02-hero-dossier.md  03-the-roster.md  04-assembling-teams.md  05-the-bouncer.md  06-who-are-you.md  07-mission-control.md  08-trial-by-fire.md  09-into-production.md  index.md  whats-next.md
lauren/: __init__.py  _app.py  _discriminated.py  _multipart.py  _socketio.py  _staticfiles.py  _validation.py  _ws_runtime.py  background.py  decorators.py  docs.py  exceptions.py  extractors.py  llms-full.txt  llms.txt  logging.py  serialization.py  sessions.py  signals.py  socketio.py  sse.py  static_files.py  streaming.py  testing.py  types.py  websockets.py
lauren/_arena/: __init__.py
lauren/_asgi/: __init__.py  _docs.py  _openapi.py
lauren/_di/: __init__.py  custom.py
lauren/_encoders/: pydantic.py
lauren/_lifecycle/: __init__.py
lauren/_modules/: __init__.py
lauren/_routing/: __init__.py
lauren/_sessions/: __init__.py  _config.py  _engine.py  _revocation.py  _serializer.py  _session.py  _signing.py  _store.py
lauren/_typing/: __init__.py  forwardref.py
lauren/reflect/: __init__.py  _app_reader.py  _composer.py  _context.py  _reader.py  _types.py
scripts/: check_llms_full.py  generate_api_docs.py
skills/: README.md
skills/abac-evaluation/: SKILL.md
skills/alembic-migrations/: SKILL.md
skills/api-key-auth/: SKILL.md
skills/api-rate-limiting/: SKILL.md
skills/api-versioning/: SKILL.md
skills/audit-log-trail/: SKILL.md
skills/background-task-scheduler/: SKILL.md
skills/building-companion-packages/: 01-package-structure.md  02-di-integration.md  03-module-factory.md  04-testing.md  05-github-workflows.md  06-llms-txt.md  07-publishing.md  SKILL.md
skills/building-lauren-apps/: SKILL.md  modules.md  project-layout.md
skills/building-lauren-background-tasks/: SKILL.md
skills/building-lauren-controllers/: SKILL.md  eval.json  extractors.md
skills/building-lauren-guards/: SKILL.md  interceptors-middlewares.md
skills/building-lauren-services/: SKILL.md  custom-providers.md  eval.json
skills/building-lauren-sessions/: SKILL.md
skills/building-lauren-streaming/: SKILL.md  websockets.md
skills/bulk-import-export/: SKILL.md
skills/common-patterns/: SKILL.md  auth-protected-crud.md  background-job.md  health-check.md  typed-sse-stream.md
skills/config-hot-reload/: SKILL.md
skills/cron-interval-jobs/: SKILL.md
skills/docker-compose-setup/: SKILL.md
skills/environment-profiles/: SKILL.md
skills/event-sourcing/: SKILL.md
skills/feature-flags/: SKILL.md
skills/field-level-encryption/: SKILL.md
skills/file-upload-validation/: SKILL.md
skills/gdpr-data-requests/: SKILL.md
skills/graceful-shutdown/: SKILL.md
skills/graphql-integration/: SKILL.md
skills/health-check-probes/: SKILL.md
skills/image-processing/: SKILL.md
skills/input-sanitization/: SKILL.md
skills/jwt-refresh-rotation/: SKILL.md
skills/jwt-tokens/: SKILL.md
skills/message-queue/: SKILL.md
skills/mfa-totp/: SKILL.md
skills/migrating-from-fastapi/: SKILL.md  di.md  middleware.md  routing.md
skills/multi-database-routing/: SKILL.md
skills/multi-tenant-isolation/: SKILL.md
skills/oauth2-integration/: SKILL.md
skills/object-storage/: SKILL.md
skills/opentelemetry-tracing/: SKILL.md
skills/postgres-fts/: SKILL.md
skills/presigned-url-uploads/: SKILL.md
skills/prometheus-metrics/: SKILL.md
skills/push-notifications/: SKILL.md
skills/pydantic-settings-config/: SKILL.md
skills/rbac-engine/: SKILL.md
skills/redis-caching/: SKILL.md
skills/rest-crud-endpoints/: SKILL.md
skills/retry-dead-letter-queue/: SKILL.md
skills/search-engine-integration/: SKILL.md
skills/secrets-management/: SKILL.md
skills/security-headers-cors/: SKILL.md
skills/session-store/: SKILL.md
skills/sqlalchemy-async/: SKILL.md
skills/sqlalchemy-models/: SKILL.md
skills/structured-json-logging/: SKILL.md
skills/testing-lauren-apps/: SKILL.md  async-testing.md
skills/transactional-email/: SKILL.md
skills/using-companion-packages/: SKILL.md  auth.md  cors.md  logging.md
tests/: conftest.py
(+227 files in other folders)
