[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lauren"
dynamic = ["version"]
description = "A metadata-first Python web framework inspired by Axum and NestJS."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Platform Engineering Team"}]
keywords = ["asgi", "web", "framework", "async", "di", "nestjs", "axum", "fastapi"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx", "uvicorn>=0.29"]

[tool.ruff.lint]
ignore = ["E741"]

[tool.setuptools.packages.find]
include = ["lauren*"]

[tool.setuptools.package-data]
lauren = ["py.typed", "llms.txt", "llms-full.txt"]

[tool.setuptools_scm]
# Version is derived from git tags (e.g. "v1.2.3" -> "1.2.3").
# Falls back to "0.0.0+unknown" on un-tagged commits.
fallback_version = "0.0.0+unknown"
version_scheme = "post-release"
local_scheme = "dirty-tag"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not benchmark'"
markers = [
    "benchmark: performance benchmarks (excluded from the default run)",
]

[dependency-groups]
dev = [
    "nox>=2026.4.10",
    "uvicorn>=0.46.0",
]
