[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lauren"
dynamic = ["version"]
description = "An ASGI web framework with dependency injection, metadata-driven routing, and modular architecture."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "Platform Engineering Team"}]
maintainers = [{name = "Platform Engineering Team"}]
keywords = [
    "asgi",
    "web",
    "framework",
    "async",
    "di",
    "dependency-injection",
    "nestjs",
    "axum",
    "fastapi",
    "openapi",
    "routing",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "anyio>=4.0",
]

[project.urls]
Homepage      = "https://lauren-py.dev"
Documentation = "https://lauren-py.dev/docs"
Repository    = "https://github.com/lauren-framework/lauren-framework"
Issues        = "https://github.com/lauren-framework/lauren-framework/issues"
Changelog     = "https://github.com/lauren-framework/lauren-framework/releases"

[project.optional-dependencies]
pydantic = [
    "pydantic>=2.0",
]
msgspec = [
    "msgspec>=0.18",
]
full = [
    "pydantic>=2.0",
    "msgspec>=0.18",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "httpx",
    "uvicorn>=0.29",
    "sqlalchemy>=2.0",
    "sqlmodel>=0.0.14",
    "pyjwt>=2.0",
    "cryptography>=40.0",
    "pyotp>=2.0",
    "passlib[bcrypt]",
    "fakeredis>=2.0",
    "pillow>=10.0",
    "openpyxl>=3.0",
    "prometheus-client>=0.17",
    "opentelemetry-api>=1.0",
    "opentelemetry-sdk>=1.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "pymdown-extensions>=10.7",
    "griffe>=1.0",
]

[tool.mypy]
python_version = "3.12"

# Ignore missing third-party stubs
ignore_missing_imports = true

[tool.ruff]
line-length = 110

[tool.ruff.lint]
ignore = ["E741", "E742", "E743"]  # Ignore ambiguous variable names (e.g. "l", "O", "I")

[tool.setuptools.packages.find]
include = ["lauren*"]

[tool.setuptools.package-data]
lauren = ["py.typed", "llms.txt", "llms-full.txt"]

[tool.setuptools_scm]
# Version is derived from git tags (e.g. "v1.2.3" -> "1.2.3").
# Falls back to "0.0.0+unknown" on un-tagged commits.
fallback_version = "0.0.0+unknown"
version_scheme = "post-release"
local_scheme = "dirty-tag"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not benchmark'"
markers = [
    "benchmark: performance benchmarks (excluded from the default run)",
]

[dependency-groups]
dev = [
    "nox>=2026.4.10",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.46.0",
]
